...
    }()

    override func viewDidLoad() {
        super.viewDidLoad()

        title = "Book Searcher"
        bookSearchBar.searchTextField.accessibilityLabel = "bookSearchField"
    }
}

// MARK: - UITableViewDataSource
extension BookListViewController: UITableViewDataSource {

...
